Fixed issue where default checkbox outline was not visible in dark mode.

--- a/src/components/checkbox/base.css
+++ b/src/components/checkbox/base.css
@@ -10,8 +10,9 @@
   --color-checkbox: --alpha(var(--color-base) / 50%);
   --color-on-checkbox: var(--color-on-base);
   /* --checkbox--outline-color: light-dark(var(--color-base-600), color-mix(in oklch, black 10%, var(--color-base-400) 40%)); */
+  --color-checkbox-active: var(--color-base-active);
 
-  --checkbox--box-shadow: 0 0 0 0px var(--color-base-100), 0 0 0 calc(1px + 0px) light-dark(var(--color-base-600), color-mix(in oklch, black 10%, var(--color-base-400) 40%)), 0 0 var(--color-base-100);
+  --checkbox--box-shadow: 0 0 0 0px var(--color-base-100), 0 0 0 calc(1px + 0px) var(--color-checkbox-active), 0 0 var(--color-base-100);
 
   background-color: var(--color-checkbox);
   color: var(--color-on-checkbox);
