--- a/src/components/checkbox/colors.css
+++ b/src/components/checkbox/colors.css
@@ -1,6 +1,7 @@
 @utility checkbox-primary {
   --color-checkbox: light-dark(var(--color-primary-50), color-mix(in oklch, black 10%, var(--color-primary-400) 20%));
   --color-on-checkbox: var(--color-on-primary);
+  --color-checkbox-active: var(--color-primary-active);
 
   --checkbox--box-shadow: 0 0 0 0px var(--color-primary-50), 0 0 0 calc(1px + 0px) var(--color-primary-600), 0 0 var(--color-primary-50);
 
@@ -22,6 +23,7 @@
 @utility checkbox-secondary {
   --color-checkbox: light-dark(var(--color-secondary-50), color-mix(in oklch, black 10%, var(--color-secondary-400) 20%));
   --color-on-checkbox: var(--color-on-secondary);
+  --color-checkbox-active: var(--color-secondary-active);
 
   --checkbox--box-shadow: 0 0 0 0px var(--color-secondary-50), 0 0 0 calc(1px + 0px) var(--color-secondary-600), 0 0 var(--color-secondary-50);
 
@@ -43,6 +45,7 @@
 @utility checkbox-accent {
   --color-checkbox: light-dark(var(--color-accent-50), color-mix(in oklch, black 10%, var(--color-accent-400) 20%));
   --color-on-checkbox: var(--color-on-accent);
+  --color-checkbox-active: var(--color-accent-active);
 
   --checkbox--box-shadow: 0 0 0 0px var(--color-accent-50), 0 0 0 calc(1px + 0px) var(--color-accent-600), 0 0 var(--color-accent-50);
 
@@ -64,6 +67,7 @@
 @utility checkbox-info {
   --color-checkbox: light-dark(var(--color-info-50), color-mix(in oklch, black 10%, var(--color-info-400) 20%));
   --color-on-checkbox: var(--color-on-info);
+  --color-checkbox-active: var(--color-info-active);
 
   --checkbox--box-shadow: 0 0 0 0px var(--color-info-50), 0 0 0 calc(1px + 0px) var(--color-info-600), 0 0 var(--color-info-50);
 
@@ -85,6 +89,7 @@
 @utility checkbox-neutral {
   --color-checkbox: light-dark(var(--color-neutral-50), color-mix(in oklch, black 10%, var(--color-neutral-400) 20%));
   --color-on-checkbox: var(--color-on-neutral);
+  --color-checkbox-active: var(--color-neutral-active);
 
   --checkbox--box-shadow: 0 0 0 0px var(--color-neutral-50), 0 0 0 calc(1px + 0px) var(--color-neutral-600), 0 0 var(--color-neutral-50);
 
@@ -106,6 +111,7 @@
 @utility checkbox-success {
   --color-checkbox: light-dark(var(--color-success-50), color-mix(in oklch, black 10%, var(--color-success-400) 20%));
   --color-on-checkbox: var(--color-on-success);
+  --color-checkbox-active: var(--color-success-active);
 
   --checkbox--box-shadow: 0 0 0 0px var(--color-success-50), 0 0 0 calc(1px + 0px) var(--color-success-600), 0 0 var(--color-success-50);
 
@@ -127,6 +133,7 @@
 @utility checkbox-warning {
   --color-checkbox: light-dark(var(--color-warning-50), color-mix(in oklch, black 10%, var(--color-warning-400) 20%));
   --color-on-checkbox: var(--color-on-warning);
+  --color-checkbox-active: var(--color-warning-active);
 
   --checkbox--box-shadow: 0 0 0 0px var(--color-warning-50), 0 0 0 calc(1px + 0px) var(--color-warning-600), 0 0 var(--color-warning-50);
 
@@ -148,6 +155,7 @@
 @utility checkbox-error {
   --color-checkbox: light-dark(var(--color-error-50), color-mix(in oklch, black 10%, var(--color-error-400) 20%));
   --color-on-checkbox: var(--color-on-error);
+  --color-checkbox-active: var(--color-error-active);
 
   --checkbox--box-shadow: 0 0 0 0px var(--color-error-50), 0 0 0 calc(1px + 0px) var(--color-error-600), 0 0 var(--color-error-50);
 
